	-> change to next/previous region in transcription widget with alt+left/right key
	-> batch layout analysis dialog
	-> right click behavior added for versions and transcripts (texts) 
	-> Login via OAuth2: Google
	
0.8.7:
	-> bugfixes for local doc reader & thumbnail widget deadlock
	-> local RGBA imgs bugfix
	-> select and load recently used documents from doc tab
	-> load last used document after login
	
0.8.8:
	-> removed auto-load of last used doc
	-> RNN HTR activated
	-> prevent install of same version which breaks application on windows 
	
0.9.0:
	-> move doc upload and search button from left document tab to the main menu bar
	-> colored background in thumbnail overview: light green=transcribed lines are there, 
		light yellow=now transcription (but lines segmented), light red=no line segmentation
	-> thumbnail overview also shows number of transcribed lines (per page and per document)
	-> automatic right to left text export for arabic, hebrew and so on
	-> included context menu in canvas (especially for tables)
	-> collapsed buttons to add elements to one dropdown button
	-> more strict version numbering (major version is first number, minor version is second number, hotfixes are third number; snapshot versions of any of those versions are identified by an additional fourth number and a '-SNAPSHOT' suffix)
	-> change to java 8
	-> first draft of table editor included (saving only works on local documents for now - until the server accepts the new PAGE format)
	-> removed obsolete writing orientation button
	-> redesigned tabs (no more right tab view)
	
0.9.1:
	-> save btn fix
	-> no more handles (transform) fix
	
0.9.2:
	-> reload doc btn reintegrated
	-> fixed split reading order bug
	
0.10.0:
	-> vertical canvas edit toolbar
	-> removed all dropdown tool items and partially replaced by new toolboxes
	
0.10.1:
	-> "loadThumbs" property determines whether thumbnails are loaded (to prevent 'no more handles' issue)
	-> first version of local autosave
	